--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
-    "pg": "^7.5.0"
+    "pg": "^7.5.0",
+    "supertest": "^3.3.0"
   }
 }
