--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^3.0.2",
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
     "jsonschema": "^1.2.4",
+    "jsonwebtoken": "^8.3.0",
     "morgan": "^1.9.1",
     "pg": "^7.5.0",
     "supertest": "^3.3.0"
